gobmkida/c0/throw_in_atari_helper
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/throw_in_atari_helper/src/patterns/helpers.c:655:29: error: unknown type name 'pattern_0'
int  throw_in_atari_helper( pattern_0 *pattern, int trans, int move, int color) 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/throw_in_atari_helper/src/patterns/helpers.c:667:1: error: use of undeclared identifier 'pattern_0'; did you mean 'pattern'?
pattern_0 *patterna; // [rsp+38h] [rbp-8h] 
^~~~~~~~~
pattern
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/throw_in_atari_helper/src/patterns/helpers.c:655:40: note: 'pattern' declared here
int  throw_in_atari_helper( pattern_0 *pattern, int trans, int move, int color) 
                                       ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/throw_in_atari_helper/src/patterns/helpers.c:667:12: error: use of undeclared identifier 'patterna'
pattern_0 *patterna; // [rsp+38h] [rbp-8h] 
           ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/throw_in_atari_helper/src/patterns/helpers.c:669:1: error: use of undeclared identifier 'patterna'; did you mean 'pattern'?
patterna = pattern; 
^~~~~~~~
pattern
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/throw_in_atari_helper/src/patterns/helpers.c:655:40: note: 'pattern' declared here
int  throw_in_atari_helper( pattern_0 *pattern, int trans, int move, int color) 
                                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/throw_in_atari_helper/src/obj/3/helpers.o] Error 1
